# MPC_quad

./: CMakeLists.txt  README.md  SRB.cpp  example1.cpp  main.cpp  readME.Md
assets/: basic_scene.xml  double pendulum.xml
data/: cost.csv  extended_output.csv  opt_test.m  plot_data.asv  plot_data.m  state.csv
go2/: go2.xml
include/: BaseDataSaver.hpp  ExtendedDataSaver.hpp
includes/: MPC.h  controller.h  dataLogging.h  globVariable.h  globalVariable.h  kinematics.h  trajectory.h
includes/logging/: ExtendedDataSaver.h  dataLogging.h
includes/mcl_controller/: controller.h  kinematics.h  trajectory.h
includes/optimization/: MCLparams.h  optimizer.h
includes/utils/: Utils.h
mcl/: quadrupedMCL.xml
src/: BaseDataSaver.cpp  ExtendedDataSaver.cpp  MPC.cpp  SRB_oneleg.cpp  controller.cpp  filter.cpp  kinematics.cpp  main.cpp  one_leg.cpp  simulate.cpp
src/logging/: BaseDataSaver.cpp  ExtendedDataSaver.cpp
src/mcl_controller/: kinematics.cpp  trajectory.cpp
src/optimization/: optimizer.cpp
src/ui/: simulate.cpp
src/utils/: Utils.cpp
